--- a/src/main/resources/templates/notes/new.html
+++ b/src/main/resources/templates/notes/new.html
@@ -14,7 +14,7 @@
 	<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
   	<script th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>
   	<script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-  	<script src="http://maps.google.com/maps/api/js?key=AIzaSyDTFN8HdFW9d9PsWGVgWSwXrrDA-HMkyb8&sensor;"></script>
+  	<script src="https://maps.google.com/maps/api/js?key=AIzaSyDTFN8HdFW9d9PsWGVgWSwXrrDA-HMkyb8&sensor;"></script>
   	<script type="text/javascript" src="https://l2.io/ip.js?var=userip"></script>
   	<script type="text/javascript" src="../js/maps.js"></script>
 </head>
